# Mai_OOP_Lab4_V22

./: .gitignore  CMakeLists.txt  README.md
include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp  point.hpp
src/: array.cpp  figure.cpp  hexagon.cpp  main.cpp  octagon.cpp  pentagon.cpp  point.cpp
tests/: tests_figs.cpp
